[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.46.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "numpy>=2.2.3",
    "openai>=1.64.0",
    "opencv-python>=4.11.0.86",
    "trafilatura>=2.0.0",
    "flask-wtf>=1.2.2",
]
